--- a/WWW.com/css/main.css
+++ b/WWW.com/css/main.css
@@ -34,7 +34,7 @@ header {
     padding: 50px 0;
 }
 
-header .logo {
+header .logo, footer .block .logo {
     text-transform: uppercase;
     font-size: 29px;
     font-weight: 800;
@@ -78,14 +78,14 @@ header nav ul li:not(.active):not(.btn) a:hover {
     border-bottom: 5px solid #DC7000;
 }
 
-header nav ul li.btn a {
+header nav ul li.btn a, .email .block button {
     background: #FA9021;
     padding: 9px 17px;
     border-radius: 5px;
     transition: all 500ms ease;
 }
 
-header nav ul li.btn a:hover {
+header nav ul li.btn a:hover, .email .block button:hover {
     background: #a02604;
 }
 
@@ -213,7 +213,7 @@ header nav ul li.btn a:hover {
 /* Секция с изображением */
 
 .features {
-    background: url('/img/BG.png') no-repeat center center fixed;
+    background: url('/WWW.com/img/BG.png') no-repeat center center fixed;
     background-size: cover;
     padding: 80px;
 }
@@ -272,4 +272,104 @@ header nav ul li.btn a:hover {
     width: 60px;
     text-align: center;
     margin: 0 auto;
+}
+
+.email {
+    padding-bottom: 120px;
+}
+
+.email h3 {
+    margin-top: 60px;
+    font-size: 30px;
+}
+
+.email .block {
+    background: #1C140F;
+    margin-top: 30px;
+    border-radius: 10px;
+    padding: 40px 3%;
+    width: 94%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.email .block h4 {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.email .block p {
+    width: 500px;
+}
+
+.email .block input {
+    background: #fff;
+    outline: none;
+    border: 0;
+    border-radius: 5px;
+    width: 380px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    padding: 20px 30px;
+    position: relative;
+    right: -100px;
+    z-index: 1;
+    padding-right: 130px;
+}
+
+.email .block input::placeholder {
+    color: #898989;
+}
+
+.email .block button {
+    cursor: pointer;
+    border: 0;
+    padding: 13px 17px;
+    position: relative;
+    z-index: 2;
+    color: #fff;
+}
+
+/* Footer */
+
+footer {
+    background: #000;
+    padding: 50px 0;    
+}
+
+footer .block {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .block p{
+    width: 300px;
+    margin: 15px 0;
+}
+
+footer .block h4 {
+    font-weight: 500;
+    font-size: 17px;
+}
+
+footer .block ul {
+    list-style: none;
+}
+
+footer .block ul li {
+    margin-top: 7px;
+    opacity: 0.8;
+}
+
+footer hr {
+    margin: 35px 0;
+    border: 0;
+    height: 0.6px;
+    background: #ccc;
+    opacity: 0.6;
+}
+
+footer > p {
+    text-align: center;
 }
